<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/add_city"
            android:backgroundTint="#CCCCCC"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:backgroundTint="#CCCCCC"
            android:textColor="#000000" />
    </LinearLayout>

    <ListView
        android:id="@+id/city_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:listSelector="#999999">
    </ListView>

    <LinearLayout
        android:id="@+id/field_nameEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:visibility="invisible"
        android:padding="8dp">

        <EditText
            android:id="@+id/editText_name"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/city_name"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:autofillHints="postalAddress"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:maxWidth="150dp" />
    </LinearLayout>

</LinearLayout>
